--- a/index.html
+++ b/index.html
@@ -282,69 +282,39 @@
           <div class="w-100 d-block"></div>
 
           <div class="col-md-4 mb-3">
-            <div class="card card-body hoverable">
-              <div class="row mx-auto mb-2 pinky-text d-flex justify-content-center">
-                <h6 class="font-weight-bold tick-blue-text mb-0">Starter Plan</h6>
+            <div class="card card-body px-0 item-list bg-white">
+              <div class="row mx-auto mb-2 tick-blue-text d-flex justify-content-center">
+                <h6 class="font-weight-bold pinky-text mb-0">Starter Plan</h6>
                 <div class="w-100"></div>
-                <h3 class="pinky-text font-weight-bold mt-0"><sup class="font-weight-normal">$</sup>35<sub class="text-muted font-weight-normal">/monthly</sub></h3>
+                <h3 class="tick-blue-text font-weight-bold mt-0"><sup class="font-weight-normal">$</sup>35<sub class="text-muted font-weight-normal">/monthly</sub></h3>
                 <div class="w-100"></div>
-                <hr class="pinky-border2">
+                <hr class="pinky-border2 mb-5">
               </div>
 
-              <div class="row mx-auto mt-0 d-flex justify-content-center">
+              <div class="row mx-auto w-100 mt-0 d-flex justify-content-center">
                 <!-- <h6 class="h6reponsive font-weight-bold tick-blue-text">Property Management</h6> -->
-                <p class="tick-blue-text font-weight-light text-center my-0 mb-2">
-                  Lorem ipsum dolor sit amet.
-                </p>
-                <div class="w-100"></div>
-                <p class="tick-border2 my-2"></p>
-                <div class="w-100"></div>
-                <p class="tick-blue-text font-weight-light text-center my-0 mb-2">
-                  Lorem ipsum dolor sit amet.
-                </p>
-                <div class="w-100"></div>
-                <p class="tick-border2 my-2"></p>
-                <div class="w-100"></div>
-                <p class="tick-blue-text font-weight-light text-center my-0 mb-2">
-                  Lorem ipsum dolor sit amet.
-                </p>
-                <div class="w-100"></div>
-                <p class="tick-border2 my-2"></p>
-                <div class="w-100"></div>
-
-                <p class="tick-blue-text font-weight-light text-center my-0 mb-2">
-                  Lorem ipsum dolor sit amet.
-                </p>
-                <div class="w-100"></div>
-                <p class="tick-border2 my-2"></p>
-                <div class="w-100"></div>
-
-                <p class="tick-blue-text font-weight-light text-center my-0 mb-2">
-                  Lorem ipsum dolor sit amet.
-                </p>
-                <div class="w-100"></div>
-                <p class="tick-border2 my-2"></p>
-                <div class="w-100"></div>
-
-                <p class="tick-blue-text font-weight-light text-center my-0 mb-2">
-                  Lorem ipsum dolor sit amet.
-                </p>
-                <button type="button" class="btn mr-3 rounded-0 pinky-button">Our Company</button>
+                <ul class="list-group list-group-flush bg-transparent mb-5">
+                  <li class="list-group-item d-flex bg-transparent text-muted font-weight-light text-center justify-content-between align-items-center">Up to 10 users monthly</li>
+                  <li class="list-group-item d-flex bg-transparent text-muted font-weight-light text-center justify-content-between align-items-center">Unlimited Updates</li>
+                  <li class="list-group-item d-flex bg-transparent text-muted font-weight-light text-center justify-content-between align-items-center">Free host &nbsp; domain</li>
+                  <li class="list-group-item d-flex bg-transparent text-muted font-weight-light text-center justify-content-between align-items-center">Support 24 / 7</li>
+                </ul> 
+                <button type="button" class="btn mr-3 rounded-0 default-bg-color">Select Plan</button>
               </div>
             </div>
           </div>
 
           <div class="col-md-4 mb-3">
-            <div class="card card-body hoverable default-bg-color">
+            <div class="card card-body px-0 item-list-mid default-bg-color">
               <div class="row mx-auto mb-2 white-text d-flex justify-content-center">
-                <h6 class="font-weight-bold tick-blue-text mb-0">Starter Plan</h6>
+                <h6 class="font-weight-bold white-text mb-0">Gold Plan</h6>
                 <div class="w-100"></div>
-                <h3 class="pinky-text font-weight-bold mt-0"><sup class="font-weight-normal">$</sup>35<sub class="text-white font-weight-normal">/monthly</sub></h3>
+                <h3 class="pinky-text font-weight-bold mt-0"><sup class="font-weight-normal">$</sup>95<sub class="text-white font-weight-normal">/monthly</sub></h3>
                 <div class="w-100"></div>
                 <hr class="pinky-border2 mb-5">
               </div>
 
-              <div class="row mx-auto mt-0 d-flex justify-content-center">
+              <div class="row mx-auto w-100 mt-0 d-flex justify-content-center">
                 <!-- <h6 class="h6reponsive font-weight-bold tick-blue-text">Property Management</h6> -->
                 <ul class="list-group list-group-flush bg-transparent mb-5">
                   <li class="list-group-item d-flex bg-transparent text-white font-weight-light text-center justify-content-between align-items-center">Up to 10 users monthly
@@ -366,79 +336,33 @@
           </div>
 
           <div class="col-md-4 mb-3">
-            <div class="card card-body hoverable">
-              <div class="row mx-auto mb-2 pinky-text d-flex justify-content-center">
-                <h6 class="font-weight-bold tick-blue-text mb-0">Starter Plan</h6>
+            <div class="card card-body px-0 item-list bg-white">
+              <div class="row mx-auto mb-2 tick-blue-text d-flex justify-content-center">
+                <h6 class="font-weight-bold pinky-text mb-0">Silver Plan</h6>
                 <div class="w-100"></div>
-                <h3 class="pinky-text font-weight-bold mt-0"><sup class="font-weight-normal">$</sup>35<sub class="text-muted font-weight-normal">/monthly</sub></h3>
+                <h3 class="tick-blue-text font-weight-bold mt-0"><sup class="font-weight-normal">$</sup>95<sub class="text-muted font-weight-normal">/monthly</sub></h3>
                 <div class="w-100"></div>
                 <hr class="pinky-border2 mb-5">
               </div>
 
-              <div class="row mx-auto mt-0 d-flex justify-content-center">
+              <div class="row mx-auto w-100 mt-0 d-flex justify-content-center">
                 <!-- <h6 class="h6reponsive font-weight-bold tick-blue-text">Property Management</h6> -->
                 <ul class="list-group list-group-flush bg-transparent mb-5">
-                  <li class="list-group-item d-flex bg-transparent text-white font-weight-light text-center justify-content-between align-items-center">Up to 10 users monthly
-                    <span class="badge pinky-button badge-pill">10</span>
-                  </li>
-                  <li class="list-group-item d-flex bg-transparent text-white font-weight-light text-center justify-content-between align-items-center">Unlimited Updates
-                    <span class="badge pinky-button badge-pill">&infin;</span>
-                  </li>
-                  <li class="list-group-item d-flex bg-transparent text-white font-weight-light text-center justify-content-between align-items-center">Free host &nbsp; domain
-                    <span class="badge pinky-button badge-pill">free</span>
-                  </li>
-                  <li class="list-group-item d-flex bg-transparent text-white font-weight-light text-center justify-content-between align-items-center">Support 24 / 7
-                    <span class="badge pinky-button badge-pill">24/7</span>
-                  </li>
+                  <li class="list-group-item d-flex bg-transparent text-muted font-weight-light text-center justify-content-between align-items-center">Up to 10 users monthly</li>
+                  <li class="list-group-item d-flex bg-transparent text-muted font-weight-light text-center justify-content-between align-items-center">Unlimited Updates</li>
+                  <li class="list-group-item d-flex bg-transparent text-muted font-weight-light text-center justify-content-between align-items-center">Free host &nbsp; domain</li>
+                  <li class="list-group-item d-flex bg-transparent text-muted font-weight-light text-center justify-content-between align-items-center">Support 24 / 7</li>
                 </ul> 
-                <button type="button" class="btn mr-3 rounded-0 pinky-button">Select Plan</button>
-              </div>
-              </div>
-
-              <div class="row mx-auto mt-0 d-flex justify-content-center">
-                <!-- <h6 class="h6reponsive font-weight-bold tick-blue-text">Property Management</h6> -->
-                <p class="tick-blue-text font-weight-light text-center my-0 mb-2">
-                  Lorem ipsum dolor sit amet.
-                </p>
-                <div class="w-100"></div>
-                <p class="tick-border2 my-2"></p>
-                <div class="w-100"></div>
-                <p class="tick-blue-text font-weight-light text-center my-0 mb-2">
-                  Lorem ipsum dolor sit amet.
-                </p>
-                <div class="w-100"></div>
-                <p class="tick-border2 my-2"></p>
-                <div class="w-100"></div>
-                <p class="tick-blue-text font-weight-light text-center my-0 mb-2">
-                  Lorem ipsum dolor sit amet.
-                </p>
-                <div class="w-100"></div>
-                <p class="tick-border2 my-2"></p>
-                <div class="w-100"></div>
-
-                <p class="tick-blue-text font-weight-light text-center my-0 mb-2">
-                  Lorem ipsum dolor sit amet.
-                </p>
-                <div class="w-100"></div>
-                <p class="tick-border2 my-2"></p>
-                <div class="w-100"></div>
-
-                <p class="tick-blue-text font-weight-light text-center my-0 mb-2">
-                  Lorem ipsum dolor sit amet.
-                </p>
-                <div class="w-100"></div>
-                <p class="tick-border2 my-2"></p>
-                <div class="w-100"></div>
-
-                <p class="tick-blue-text font-weight-light text-center my-0 mb-2">
-                  Lorem ipsum dolor sit amet.
-                </p>
-                <button type="button" class="btn mr-3 rounded-0 pinky-button">Our Company</button>
+                <button type="button" class="btn mr-3 rounded-0 default-bg-color">Select Plan</button>
               </div>
             </div>
           </div>
         </div>
       </div>
+    </section>
+
+    <section class="news-section py-5">
+      
     </section>
   </main>
   <section>
